--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
-    "pycollections": "^0.9.0"
+    "pycollections": "^0.9.0",
+    "socket.io": "^4.6.1"
   }
 }
